// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries fetches list of cryptocurrencies 1`] = `
Object {
  "data": Object {
    "cryptoes": Array [
      Object {
        "id": 1,
        "name": "Bitcoin",
        "starred": false,
        "symbol": "BTC",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches list of values 1`] = `
Object {
  "data": Object {
    "values": Array [
      Object {
        "createdAt": "2019-04-21T22:00:00.000Z",
        "id": 1,
        "value": 100000.1,
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
